tests/baselines/reference/computedPropertyNames11_ES6(strict=true).errors.txt
computedPropertyNames11_ES6.ts(6,9): error TS7032: Property '[n]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames11_ES6.ts(6,13): error TS7006: Parameter 'v' implicitly has an 'any' type.
computedPropertyNames11_ES6.ts(8,9): error TS7032: Property '[s + n]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames11_ES6.ts(8,17): error TS7006: Parameter 'v' implicitly has an 'any' type.
computedPropertyNames11_ES6.ts(10,9): error TS7032: Property '[""]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames11_ES6.ts(10,14): error TS7006: Parameter 'v' implicitly has an 'any' type.
computedPropertyNames11_ES6.ts(12,9): error TS7032: Property '[a]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames11_ES6.ts(12,13): error TS7006: Parameter 'v' implicitly has an 'any' type.
computedPropertyNames11_ES6.ts(14,9): error TS7032: Property '[`hello bye`]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames11_ES6.ts(14,23): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== computedPropertyNames11_ES6.ts (10 errors) ====
    var s: string;
    var n: number;
    var a: any;
    var v = {
        get [s]() { return 0; },
        set [n](v) { },
            ~~~
!!! error TS7032: Property '[n]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        get [s + s]() { return 0; },
        set [s + n](v) { },
            ~~~~~~~
!!! error TS7032: Property '[s + n]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                    ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        get [+s]() { return 0; },
        set [""](v) { },
            ~~~~
!!! error TS7032: Property '[""]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                 ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        get [0]() { return 0; },
        set [a](v) { },
            ~~~
!!! error TS7032: Property '[a]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        get [<any>true]() { return 0; },
        set [`hello bye`](v) { },
            ~~~~~~~~~~~~~
!!! error TS7032: Property '[`hello bye`]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                          ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        get [`hello ${a} bye`]() { return 0; }
    }